<resources>
    <string name="app_name">My Application Work</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="back">&lt; Back</string>
    <string name="age13">13+</string>
    <string name="age16">16+</string>

    <string name="nameMovie">
        Avengers:\nEnd Game
    </string>
    <string name="nameMovieList">
        Avengers: End Game
    </string>
    <string name="nameMovieList2">
        Tenet
    </string>
    <string name="nameMovieList3">
        Black Widow
    </string>
    <string name="nameMovieList4">
        Wonder Woman 1984
    </string>
    <string name="min137">137 min</string>
    <string name="min97">97 min</string>
    <string name="min102">102 min</string>
    <string name="min120">120 min</string>
    <string name="tagLine">Action, Adventure, Fantasy</string>
    <string name="tagLine2">Action, Sci-Fi, Thriller</string>
    <string name="tagLine3">Action, Adventure, Sci-Fi</string>
    <string name="tagLine4">Action, Adventure, Fantasy</string>

    <string name="reviews125">125 Reviews</string>
    <string name="reviews98">98 Reviews</string>
    <string name="reviews38">38 Reviews</string>
    <string name="reviews74">74 Reviews</string>

    <string name="storyHead">Storyline</string>
    <string name="story">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos"'" actions and restore balance to the universe.</string>
    <string name="cast">Cast</string>
    <string name="robertDowney">Robert Downey Jr.</string>
    <string name="chrisEvans">Chris  Evans</string>
    <string name="markRuffalo">Mark  Ruffalo</string>
    <string name="chrisHemsworth">Chris Hemsworth</string>
    <string name="moveList">Movies list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>