<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/myview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        tools:context=".MovieDetailsActivity">

        <ImageView
            android:id="@+id/imageViewBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
             />

        <ImageView
            android:id="@+id/imageViewFillBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="centerCrop"
            android:src="@drawable/fill_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="56dp"
            android:text="@string/back"
            android:textColor="@color/textBack"
            android:textSize="12sp"
            android:lineSpacingExtra="2sp"
            android:gravity="center_horizontal|center_vertical"
            android:alpha="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/textViewAge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginBottom="56dp"
            android:text="@string/age"
            android:textColor="@color/textBack"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@id/imageViewBackground"
            app:layout_constraintStart_toStartOf="@id/imageViewBackground"
           />

        <TextView
            android:id="@+id/textViewNameMovie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-black"
            android:gravity="center_vertical"
            android:shadowColor="#80000000"
            android:shadowDx="0"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:text="@string/nameMovie"
            android:textColor="@color/textName"
            android:textSize="40sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewAge"
           />

        <TextView
            android:id="@+id/textViewTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="4dp"
            android:text="@string/tagLine"
            android:textColor="@color/textTags"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewNameMovie"
            />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="8dp"
            android:theme="@style/MyRatingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:numStars="5"
            android:rating="4"
            android:stepSize="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewTag" />

        <TextView
            android:id="@+id/textViewReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="4dp"
            android:text="@string/reviews"
            android:textColor="@color/textRewiews"
            android:textSize="14sp"
            app:layout_constraintStart_toEndOf="@id/ratingBar"
            app:layout_constraintTop_toBottomOf="@id/textViewTag"
            />

        <TextView
            android:id="@+id/textViewStoryHead"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="24dp"
            android:text="@string/storyHead"
            android:textColor="@color/textName"
            android:textSize="14sp"
            android:shadowColor = "#80000000"
            android:shadowDx="0"
            android:shadowDy="6"
            android:shadowRadius="12"
            android:lineSpacingExtra="4sp"
            android:gravity="center_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBar"
            />

        <TextView
            android:id="@+id/textViewStory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="4dp"
            android:layout_marginRight="@dimen/fab_margin"
            android:text="@string/story"
            android:textColor="@color/textBack"
            android:textSize="14sp"
            android:lineSpacingExtra="4sp"
            android:gravity="center_vertical"
            android:alpha="0.75"
            app:layout_constraintEnd_toEndOf="@id/constraint"
            app:layout_constraintStart_toStartOf="@id/constraint"
            app:layout_constraintTop_toBottomOf="@id/textViewStoryHead"
            />

        <TextView
            android:id="@+id/textViewCast"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textColor="@color/textBack"
            android:textSize="14sp"
            android:lineSpacingExtra="8sp"
            android:gravity="center_vertical"
            android:shadowDx="0"
            android:shadowDy="6"
            android:shadowRadius="12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewStory"
            />

        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginTop="7dp"
            android:background="@color/background"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textViewCast"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/robert_downey"></ImageView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/chris_evans"></ImageView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/mark_ruffalo"></ImageView>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@drawable/chris_hemsworth"></ImageView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linear2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_marginTop="6dp"
            android:background="@color/background"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linear1"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/robertDowney"
                android:textColor="@color/textBack"
                android:textSize="@dimen/text_for_image"
                android:lineSpacingExtra="2sp"
                android:gravity="center_vertical"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/chrisEvans"
                android:textColor="@color/textBack"
                android:textSize="@dimen/text_for_image"
                android:lineSpacingExtra="2sp"
                android:gravity="center_vertical"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:text="@string/markRuffalo"
                android:textColor="@color/textBack"
                android:textSize="@dimen/text_for_image"
                android:gravity="center_vertical"
                ></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:text="@string/chrisHemsworth"
                android:textColor="@color/textBack"
                android:textSize="@dimen/text_for_image"
                android:lineSpacingExtra="2sp"
                android:gravity="center_vertical"
                ></TextView>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>